<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Duracao" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="right">
            <Chronometer android:text="Chronometer" android:id="@+id/exer_aero_display_duracao" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Distancia" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="right">
            <TextView android:text="00" android:id="@+id/exer_aero_display_distancia" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Velocidade" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="right">
            <TextView android:text="00" android:id="@+id/exer_aero_display_velocidade" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center">
        <Button android:text="@string/Iniciar" android:id="@+id/exer_aero_btn_iniciar" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <Button android:text="@string/Parar" android:id="@+id/exer_aero_btn_parar" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
   
    
</LinearLayout>
