<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:orientation="horizontal">
    	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Programa: "/>
    	<TextView android:layout_width="wrap_content" android:id="@+id/programa_nome" android:layout_height="wrap_content"/>
    </LinearLayout>

  <ListView 
  android:id="@+id/series_listview" 
  android:layout_height="wrap_content" 
  android:layout_width="fill_parent"
  android:layout_weight="1">
  </ListView>
   <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center">
	   <Button android:id="@+id/series_btn_add" android:layout_height="wrap_content" android:layout_width="100dp" android:text="@string/Adicionar"/>
	   <Button android:id="@+id/series_btn_edit" android:layout_height="wrap_content" android:layout_width="100dp" android:text="@string/Editar"/>
	   <Button android:id="@+id/series_btn_del" android:layout_height="wrap_content" android:layout_width="100dp" android:text="@string/Excluir"/>
   </LinearLayout>  
</LinearLayout>
